--- a/fireinspectioncal.html
+++ b/fireinspectioncal.html
@@ -550,12 +550,12 @@ strong{
 <div class="calculator-container">
     <h2>Fire Extinguisher Inspection</h2>
     <div class="form-group">
-      <label for="initialWeight">Initial Weight (lbs):</label>
-      <input type="number" id="initialWeight" placeholder="Enter Initial Weight">
+        <label for="initialWeight">Initial Weight (lbs):</label>
+        <input type="number" id="initialWeight" placeholder="Enter Initial Weight">
     </div>
     <div class="form-group">
-      <label for="currentWeight">Current Weight (lbs):</label>
-      <input type="number" id="currentWeight" placeholder="Enter Current Weight">
+        <label for="currentWeight">Current Weight (lbs):</label>
+        <input type="number" id="currentWeight" placeholder="Enter Current Weight">
     </div>
     <button class="cal-btn" onclick="calculateWeightLoss()">Calculate Weight Loss %</button>
     <div class="result" id="result"></div>
@@ -579,18 +579,25 @@ strong{
 
 <script>
     function calculateWeightLoss() {
-      const initialWeight = parseFloat(document.getElementById('initialWeight').value);
-      const currentWeight = parseFloat(document.getElementById('currentWeight').value);
-  
-      if (isNaN(initialWeight) || isNaN(currentWeight) || initialWeight <= 0 || currentWeight < 0 || currentWeight > initialWeight) {
-        document.getElementById('result').innerText = "Please enter valid weight values.";
-        return;
-      }
-  
-      const weightLossPercentage = ((initialWeight - currentWeight) / initialWeight) * 100;
-      document.getElementById('result').innerText = `Weight Loss: ${weightLossPercentage.toFixed(2)}%`;
+        const initialWeight = parseFloat(document.getElementById('initialWeight').value);
+        const currentWeight = parseFloat(document.getElementById('currentWeight').value);
+        const resultElement = document.getElementById('result');
+
+        if (isNaN(initialWeight) || isNaN(currentWeight) || initialWeight <= 0 || currentWeight < 0) {
+            resultElement.innerText = "Please enter valid positive weight values.";
+            return;
+        }
+
+        if (currentWeight > initialWeight) {
+            resultElement.innerText = "Current weight cannot be greater than the initial weight.";
+            return;
+        }
+
+        const weightLossPercentage = ((initialWeight - currentWeight) / initialWeight) * 100;
+        resultElement.innerText = `Weight Loss: ${weightLossPercentage.toFixed(2)}%`;
     }
 </script>
+
 
 
 
