--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -645,7 +645,7 @@
             <a href="fireloadercal.html" class="calculator-btn">Fire Load Calculator</a>
                 <a href="fireextinguishercal.html" class="calculator-btn">Fire Extinguisher Placement Calculator</a>
                 <a href="fireinspectioncal.html" class="calculator-btn">Fire Extinguisher Inspection</a>
-                <a href="firedensitycal.html" class="calculator-btn">Fire Density Inspection</a>
+                <a href="firedensitycal.html" class="calculator-btn">Fire Load Density Calculator</a>
                 <a href="nethazardcalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Net Hazard Volume Calculator</a>
                 <a href="agentquantitycalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Agent Quantity Calculator</a>
                 <a href="nozzlequantityplacementcalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Nozzle Quantity Calculator</a>
