--- a/recyclingcarbonfootprintcalculator.html
+++ b/recyclingcarbonfootprintcalculator.html
@@ -644,7 +644,7 @@ function calculateSavings() {
     const weight = parseFloat(document.getElementById('weight').value) || 0;
     const unit = document.getElementById('unit').value;
     
-    if (weight <= 0) {
+    if (weight < 0) {
         document.getElementById('result').innerHTML = "<p>Please enter a valid weight.</p>";
         return;
     }
