--- a/finaldesignquantityforco2calculator.html
+++ b/finaldesignquantityforco2calculator.html
@@ -628,13 +628,11 @@ tr:hover {
     </ul>
    <h3> Parameters Used</h3>
 <ul>
-<li><strong>Modified Quantity (m<sub>D</sub>):</strong>calculated based on the hazard type and volume.</li>
-
-<li><strong> Adjustment (m<sub>lo</sub>):</strong> to account for gaps in the room.</li>
-
-<li><strong>Ventilation Adjustment (m<sub>lv</sub>):</strong>to account for airflow from HVAC systems.</li>
-
-<li><strong>Temperature Adjustment (m<sub>T</sub>):</strong> to account for temperature fluctuations.</li>
+    <p><strong>Modified Quantity (m<sub>D</sub>)</strong>: Measured in kilograms (kg) – the base amount of CO₂ required.</p>
+    <p><strong>Leakage Adjustment (m<sub>lo</sub>)</strong>: Measured in kilograms (kg) – additional CO₂ to compensate for leaks.</p>
+    <p><strong>Ventilation Adjustment (m<sub>lv</sub>)</strong>: Measured in kilograms (kg) – extra CO₂ needed due to airflow.</p>
+    <p><strong>Temperature Adjustment (m<sub>T</sub>)</strong>: Measured in kilograms (kg) – compensates for CO₂ behavior changes due to temperature variations.</p>
+    
 </ul>
     <h3>
         **How It Works:**
@@ -656,6 +654,12 @@ tr:hover {
     <p>
         Enter the required values and click **Calculate Final Design Quantity** to see the result. This calculation aids fire safety engineers and facility managers in designing effective suppression systems.
     </p>
+    <p>If you need assistance calculating the Modified CO₂ Quantity Calculator, please use the following link:</p>
+    <ul style="display: flex;">
+        <li style="margin: 20px auto;">
+            <a href="modifiedquantitycalculator.html" style="background-color: #1560bd; padding: 10px; color: white; border-radius: 10px;">Modified CO₂ Quantity Calculator</a>
+        </li>
+    </ul>
 </div>
 
 <script>
